Updated index.html file

--- a/css-exercise-one/index.html
+++ b/css-exercise-one/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <!-- reset browser -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -28,13 +30,14 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <!-- added element2 so that I can call out the last three div elements -->
+      <div class="element2">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="element2">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="element2">
         <h3>This is text for a div element</h3>
       </div>
     </section>
