Updated html to include nesting h1

--- a/css-exercise-three/index.html
+++ b/css-exercise-three/index.html
@@ -16,7 +16,8 @@
       </nav>
       <section class="restaurant-list">
         <div class="location">
-          <div class="content">
+          <!-- added div id for h1 only in content to be changed -->
+          <div id="content">
             <h1>Bakalaki Greek Taverna</h1>
             <h3>Seng Poh Road 3, Singapore</h3>
           </div>
@@ -25,7 +26,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Entre-Nous Creperie</h1>
             <h3>27 Seah Street #01-01, Singapore</h3>
           </div>
@@ -34,7 +35,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Fratini La Trattoria</h1>
             <h3>10 Greenwood Avenue, Singapore</h3>
           </div>
@@ -43,7 +44,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Rhubarb</h1>
             <h3>3 Duxton Hill, Singapore</h3>
           </div>
@@ -52,7 +53,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Colony</h1>
             <h3>7 Raffles Avenue, The Ritz-Carlton, Singapore</h3>
           </div>
@@ -61,7 +62,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Alma By Juan Amador</h1>
             <h3>22 Scotts Road, Goodwood Park Hotel, Singapore</h3>
           </div>
@@ -70,7 +71,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>Summer Pavilion</h1>
             <h3>7 Raffles Avenue, The Ritz-Carlton, Singapore</h3>
           </div>
@@ -79,7 +80,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>My Awesome Cafe</h1>
             <h3>Telok Ayer Street, Singapore</h3>
           </div>
@@ -88,7 +89,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>MTR Restaurant</h1>
             <h3>438 Serangoon Road #438, Singapore</h3>
           </div>
@@ -97,7 +98,7 @@
           </div>
         </div>
         <div class="location">
-          <div class="content">
+          <div id="content">
             <h1>The Curry Culture</h1>
             <h3>31 Cuppage Road Cuppage Terrace, Singapore</h3>
           </div>
