--- a/css-exercise-four/index.html
+++ b/css-exercise-four/index.html
@@ -9,24 +9,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <section id="container">
+    <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <!-- adding class for all preview divs -->
-        <div id="previews">
+        <div class="preview baku">
           <h1>Baku</h1>
-          <img src="/images/baku.jpg" alt="Baku img">
+          <img src="images/baku.jpg" alt="Baku img">
         </div>
-        <div id="previews">
+        <div class="preview london">
           <h1>London</h1>
-          <img src="/images/london.png" alt="London img">
+          <img src="images/london.png" alt="London img">
         </div>
-        <div id="previews">
+        <div class="preview madrid">
           <h1>Madrid</h1>
-          <img src="/images/madrid.jpg" alt="Madrid img">
+          <img src="images/madrid.jpg" alt="Madrid img">
         </div>
-        <div id="previews">
+        <div class="preview rome">
           <h1>Rome</h1>
-          <img src="/images/rome.jpg" alt="Rome img">
+          <img src="images/rome.jpg" alt="Rome img">
         </div>
     </section>
   </body>
