--- a/css-exercise-four/index.html
+++ b/css-exercise-four/index.html
@@ -11,21 +11,17 @@
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-        <div class="preview baku">
+        <div class="preview_baku">
           <h1>Baku</h1>
-          <img src="images/baku.jpg" alt="Baku img">
         </div>
-        <div class="preview london">
+        <div class="preview_london">
           <h1>London</h1>
-          <img src="images/london.png" alt="London img">
         </div>
-        <div class="preview madrid">
+        <div class="preview_madrid">
           <h1>Madrid</h1>
-          <img src="images/madrid.jpg" alt="Madrid img">
         </div>
-        <div class="preview rome">
+        <div class="preview_rome">
           <h1>Rome</h1>
-          <img src="images/rome.jpg" alt="Rome img">
         </div>
     </section>
   </body>
