Added images and made changes

--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -15,44 +15,40 @@
           <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </div>
       </nav>
-      <section class="bus routes">
+      <section class="bus-routes">
         <div class="eastbound">
           <div class="content">
             <h1>Eastbound</h1>
             <div class="column">
-              <h3>Line</h3>
+              <div class="lines">
               <h5>60</h5>
               <h5>124</h5>
+            </div>
+          </div>
             <div class="column">
-              <h3>Destination</h3>
               <h5>Randolph/Harbor</h5>
               <h5>Navy Pier</h5>
+            </div>
             <div class="column">
-              <h3>Frequency</h3>
               <h5>Every 20 minutes</h5>
               <h5>Every 10 minutes</h5>
             </div>
           </div>
         </div>
-      </div>
-    </div>
         <div class="northbound">
           <div class="content">
             <h1>Northbound</h1>
             <div class="column">
-              <h3>Line</h3>
               <h5>151</h5>
+            </div>
             <div class="column">
-              <h3>Destination</h3>
               <h5>Devon/Clark</h5>
+            </div>
             <div class="column">
-              <h3>Frequency</h3>
               <h5>Every 15 minutes</h5>
             </div>
           </div>
         </div>
-      </div>
-    </div>
 </section>
   </body>
 </html>
