--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -20,7 +20,7 @@
           <div class="content">
             <h1>Eastbound</h1>
             <div class="column">
-              <div class="lines">
+              <div class="column lines">
               <h5>60</h5>
               <h5>124</h5>
             </div>
