--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -19,36 +19,103 @@
         <div class="eastbound">
           <div class="content">
             <h1>Eastbound</h1>
-            <div class="column">
-              <div class="column lines">
+            <ul>
+            <li>
+              <div class="bus-number">
               <h5>60</h5>
               <h5>124</h5>
             </div>
-          </div>
-            <div class="column">
+            <div class="bus-destination">
               <h5>Randolph/Harbor</h5>
               <h5>Navy Pier</h5>
             </div>
-            <div class="column">
+            <div class="bus-frequency">
               <h5>Every 20 minutes</h5>
+              <h5>Every 10 minutes</h5>
+            </div>
+          </li>
+        </ul>
+          </div>
+          </div>
+        <div class="northbound">
+          <div class="content">
+            <h1>Northbound</h1>
+            <ul>
+              <li>
+            <div class="bus-number">
+              <h5>151</h5>
+            </div>
+            <div class="bus-destination">
+              <h5>Devon/Clark</h5>
+            </div>
+            <div class="bus-frequency">
+              <h5>Every 16 minutes</h5>
+            </div>
+          </ul>
+        </li>
+          </div>
+        </div>
+        </div>
+
+<!--
+        <div class="southbound">
+          <div class="content">
+            <h1>Southbound</h1>
+            <div class="column">
+                <div class="column lines">
+              <h5>J14</h5>
+              <h5>124</h5>
+            </div>
+            </div>
+            <div class="column">
+              <h5>103rd/Stony Island</h5>
+              <h5>Navy Pier</h5>
+            </div>
+            <div class="column">
+              <h5>Every 15 minutes</h5>
               <h5>Every 10 minutes</h5>
             </div>
           </div>
         </div>
-        <div class="northbound">
+        <div class="reroute">
           <div class="content">
-            <h1>Northbound</h1>
+            <h1>Reroute</h1>
             <div class="column">
-              <h5>151</h5>
+                <div class="column lines">
+              <h5>6x</h5>
+            </div>
             </div>
             <div class="column">
-              <h5>Devon/Clark</h5>
+              <h5>Jackson Park Express</h5>
             </div>
             <div class="column">
-              <h5>Every 15 minutes</h5>
+              <h5>N/A</h5>
             </div>
           </div>
         </div>
+        <div class="out-of-service">
+          <div class="content">
+            <h1>Out of service</h1>
+            <div class="column">
+                <div class="column lines">
+              <h5>4</h5>
+              <h5>20</h5>
+              <h5>157</h5>
+            </div>
+          </div>
+            <div class="column">
+              <h5>Cottage Grove</h5>
+              <h5>Madison</h5>
+              <h5>Streeterville/Taylor</h5>
+            </div>
+            <div class="column">
+              <h5>Resumes 12:10am</h5>
+              <h5>Resumes 12:10am</h5>
+              <h5>Resumes 6:00am</h5>
+            </div>
+          </div>
+        </div>
+-->
 </section>
   </body>
 </html>
