--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -22,16 +22,20 @@
             <ul>
             <li>
               <div class="bus-number">
+                <div class="bus-number number">
               <h5>60</h5>
+            </div>
+            <div class="bus-number number">
               <h5>124</h5>
             </div>
+          </div>
             <div class="bus-destination">
-              <h5>Randolph/Harbor</h5>
+              <h5>Randolph / Harbor</h5>
               <h5>Navy Pier</h5>
             </div>
             <div class="bus-frequency">
-              <h5>Every 20 minutes</h5>
-              <h5>Every 10 minutes</h5>
+              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">20</span> <span style="font-size:12px">minutes</span></h5>
+              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
             </div>
           </li>
         </ul>
@@ -43,13 +47,15 @@
             <ul>
               <li>
             <div class="bus-number">
+                <div class="bus-number number">
               <h5>151</h5>
             </div>
+            </div>
             <div class="bus-destination">
-              <h5>Devon/Clark</h5>
+              <h5>Devon / Clark</h5>
             </div>
             <div class="bus-frequency">
-              <h5>Every 16 minutes</h5>
+              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">16</span> <span style="font-size:12px">minutes</span></h5>
             </div>
           </ul>
         </li>
