--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -15,113 +15,169 @@
           <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </div>
       </nav>
-      <section class="bus-routes">
         <div class="eastbound">
-          <div class="content">
             <h1>Eastbound</h1>
+            <div class="content">
             <ul>
             <li>
               <div class="bus-number">
-                <div class="bus-number number">
               <h5>60</h5>
-            </div>
-            <div class="bus-number number">
-              <h5>124</h5>
-            </div>
           </div>
             <div class="bus-destination">
               <h5>Randolph / Harbor</h5>
-              <h5>Navy Pier</h5>
-            </div>
+          </div>
             <div class="bus-frequency">
               <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">20</span> <span style="font-size:12px">minutes</span></h5>
-              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
-            </div>
+          </div>
           </li>
+          <li>
+            <div class="bus-number">
+            <h5>124</h5>
+        </div>
+          <div class="bus-destination">
+            <h5>Navy Pier</h5>
+        </div>
+          <div class="bus-frequency">
+            <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
+        </div>
+        </li>
         </ul>
           </div>
           </div>
-        <div class="northbound">
-          <div class="content">
-            <h1>Northbound</h1>
-            <ul>
+          <div class="northbound">
+              <h1>Northbound</h1>
+              <div class="content">
+              <ul>
               <li>
-            <div class="bus-number">
-                <div class="bus-number number">
-              <h5>151</h5>
+                <div class="bus-number">
+                <h5>151</h5>
             </div>
+              <div class="bus-destination">
+                <h5>Devon / Clark</h5>
             </div>
-            <div class="bus-destination">
-              <h5>Devon / Clark</h5>
+              <div class="bus-frequency">
+                <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">16</span> <span style="font-size:12px">minutes</span></h5>
             </div>
-            <div class="bus-frequency">
-              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">16</span> <span style="font-size:12px">minutes</span></h5>
-            </div>
+            </li>
           </ul>
-        </li>
-          </div>
-        </div>
-        </div>
-
-<!--
-        <div class="southbound">
-          <div class="content">
-            <h1>Southbound</h1>
-            <div class="column">
-                <div class="column lines">
-              <h5>J14</h5>
-              <h5>124</h5>
             </div>
             </div>
-            <div class="column">
-              <h5>103rd/Stony Island</h5>
-              <h5>Navy Pier</h5>
+            <div class="southbound">
+                <h1>Southbound</h1>
+                <div class="content">
+                <ul>
+                <li>
+                  <div class="bus-number">
+                  <h5>J14</h5>
+              </div>
+                <div class="bus-destination">
+                  <h5>103rd / Stony Island</h5>
+              </div>
+                <div class="bus-frequency">
+                  <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">15</span> <span style="font-size:12px">minutes</span></h5>
+              </div>
+              </li>
+              <li>
+                <div class="bus-number">
+                <h5>124</h5>
             </div>
-            <div class="column">
-              <h5>Every 15 minutes</h5>
-              <h5>Every 10 minutes</h5>
+              <div class="bus-destination">
+                <h5>Navy Pier</h5>
             </div>
-          </div>
-        </div>
-        <div class="reroute">
-          <div class="content">
-            <h1>Reroute</h1>
-            <div class="column">
-                <div class="column lines">
-              <h5>6x</h5>
+              <div class="bus-frequency">
+                <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
             </div>
-            </div>
-            <div class="column">
-              <h5>Jackson Park Express</h5>
-            </div>
-            <div class="column">
-              <h5>N/A</h5>
-            </div>
-          </div>
-        </div>
-        <div class="out-of-service">
-          <div class="content">
-            <h1>Out of service</h1>
-            <div class="column">
-                <div class="column lines">
-              <h5>4</h5>
-              <h5>20</h5>
-              <h5>157</h5>
-            </div>
-          </div>
-            <div class="column">
-              <h5>Cottage Grove</h5>
-              <h5>Madison</h5>
-              <h5>Streeterville/Taylor</h5>
-            </div>
-            <div class="column">
-              <h5>Resumes 12:10am</h5>
-              <h5>Resumes 12:10am</h5>
-              <h5>Resumes 6:00am</h5>
-            </div>
-          </div>
-        </div>
--->
+            </li>
+            </ul>
+              </div>
+              </div>
+              <div class="southbound">
+                  <h1>Southbound</h1>
+                  <div class="content">
+                  <ul>
+                  <li>
+                    <div class="bus-number">
+                    <h5>J14</h5>
+                </div>
+                  <div class="bus-destination">
+                    <h5>103rd / Stony Island</h5>
+                </div>
+                  <div class="bus-frequency">
+                    <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">15</span> <span style="font-size:12px">minutes</span></h5>
+                </div>
+                </li>
+                <li>
+                  <div class="bus-number">
+                  <h5>124</h5>
+              </div>
+                <div class="bus-destination">
+                  <h5>Navy Pier</h5>
+              </div>
+                <div class="bus-frequency">
+                  <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
+              </div>
+              </li>
+              </ul>
+                </div>
+                </div>
+                <div class="reroute">
+                    <h1>Reroute</h1>
+                    <div class="content">
+                    <ul>
+                    <li>
+                      <div class="bus-number">
+                      <h5>6x</h5>
+                  </div>
+                    <div class="bus-destination">
+                      <h5>Jackson Park Express</h5>
+                  </div>
+                    <div class="bus-frequency">
+                      <h5><span style="font-weight:700">N/A</span></h5>
+                  </div>
+                  </li>
+                </ul>
+                  </div>
+                  </div>
+                  <div class="out-of-service">
+                      <h1>Out of Service</h1>
+                      <div class="content">
+                      <ul>
+                      <li>
+                        <div class="bus-number">
+                        <h5>4</h5>
+                    </div>
+                      <div class="bus-destination">
+                        <h5>Cottage Grove</h5>
+                    </div>
+                      <div class="bus-frequency">
+                        <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
+                    </div>
+                    </li>
+                    <li>
+                      <div class="bus-number">
+                      <h5>20</h5>
+                  </div>
+                    <div class="bus-destination">
+                      <h5>Madison</h5>
+                  </div>
+                    <div class="bus-frequency">
+                      <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
+                  </div>
+                  </li>
+                  <li>
+                    <div class="bus-number">
+                    <h5>157</h5>
+                </div>
+                  <div class="bus-destination">
+                    <h5>Streeterville / Taylor</h5>
+                </div>
+                  <div class="bus-frequency">
+                    <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">6:00</span><span style="font-size:12px"> am</span></h5>
+                </div>
+                </li>
+                  </ul>
+                    </div>
+                    </div>
 </section>
   </body>
 </html>
