--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -14,7 +14,11 @@
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </div>
+
       </nav>
+      <div class="header-title">
+        <h2>Routes</h2>
+      </div>
         <div class="eastbound">
             <h1>Eastbound</h1>
             <div class="content">
