--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <section class="container">
+    <main class="container">
       <nav>
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </div>
 
       </nav>
-      <div class="header-title">
+      <header class="header-title">
         <h2>Routes</h2>
       </div>
-        <div class="eastbound">
+        <section class="eastbound">
             <h1>Eastbound</h1>
             <div class="content">
             <ul>
@@ -31,24 +31,27 @@
               <h5>Randolph / Harbor</h5>
           </div>
             <div class="bus-frequency">
-              <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">20</span> <span style="font-size:12px">minutes</span></h5>
+              <h5><span style="font-weight:700">20</span> <span style="font-size:12px">min</span></h5>
           </div>
           </li>
-          <li>
+          <li class="arriving">
             <div class="bus-number">
             <h5>124</h5>
         </div>
           <div class="bus-destination">
+
             <h5>Navy Pier</h5>
-        </div>
-          <div class="bus-frequency">
-            <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
+          </div>
+
+          <div class="arriving-bus-frequency">
+            <h5><span style="font-weight:700">10</span> <span style="font-size:12px">min</span></h5>
+            <h3>arriving</h3>
         </div>
         </li>
         </ul>
           </div>
           </div>
-          <div class="northbound">
+          <sectin class="northbound">
               <h1>Northbound</h1>
               <div class="content">
               <ul>
@@ -60,14 +63,14 @@
                 <h5>Devon / Clark</h5>
             </div>
               <div class="bus-frequency">
-                <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">16</span> <span style="font-size:12px">minutes</span></h5>
+                <h5><span style="font-weight:700">16</span> <span style="font-size:12px">min</span></h5>
             </div>
             </li>
           </ul>
             </div>
             </div>
-      
-              <div class="southbound">
+
+              <section class="southbound">
                   <h1>Southbound</h1>
                   <div class="content">
                   <ul>
@@ -81,24 +84,31 @@
 
                 </div>
                   <div class="bus-frequency">
-                    <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">15</span> <span style="font-size:12px">minutes</span></h5>
+                    <h5> <span style="font-weight:700">15</span> <span style="font-size:12px">min</span></h5>
                 </div>
                 </li>
-                <li>
+                <li class="arriving">
                   <div class="bus-number">
+
                   <h5>124</h5>
+              
               </div>
                 <div class="bus-destination">
+
                   <h5>Navy Pier</h5>
-              </div>
-                <div class="bus-frequency">
-                  <h5><span style="font-size:12px">Every</span> <span style="font-weight:700">10</span> <span style="font-size:12px">minutes</span></h5>
-              </div>
+                </div>
+
+                <div class="arriving-bus-frequency">
+
+                  <h5><span style="font-weight:700">10</span> <span style="font-size:12px">min</span></h5>
+                  <h3><span style="font-weight:700">arriving</span></h3>
+
+            </div>
               </li>
               </ul>
                 </div>
                 </div>
-                <div class="reroute">
+                <section class="reroute">
                     <h1>Reroute</h1>
                     <div class="content">
                     <ul>
@@ -118,7 +128,7 @@
                 </ul>
                   </div>
                   </div>
-                  <div class="out-of-service">
+                  <section class="out-of-service">
                       <h1>Out of Service</h1>
                       <div class="content">
                       <ul>
@@ -130,7 +140,7 @@
                         <h5>Cottage Grove</h5>
                     </div>
                       <div class="bus-frequency">
-                        <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
+                        <h5> <span style="font-weight:700">3</span><span style="font-size:12px"> hr</span><span style="font-weight:700">10</span><span style="font-size:12px"> min</span></h5>
                     </div>
                     </li>
                     <li>
@@ -141,7 +151,7 @@
                       <h5>Madison</h5>
                   </div>
                     <div class="bus-frequency">
-                      <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
+                      <h5><span style="font-weight:700">3</span><span style="font-size:12px"> hr</span><span style="font-weight:700">10</span><span style="font-size:12px"> min</span></h5>
                   </div>
                   </li>
                   <li>
@@ -152,7 +162,7 @@
                     <h5>Streeterville / Taylor</h5>
                 </div>
                   <div class="bus-frequency">
-                    <h5><span style="font-size:12px">Resumes</span> <span style="font-weight:700">6:00</span><span style="font-size:12px"> am</span></h5>
+                    <h5><span style="font-weight:700">6</span><span style="font-size:12px"> hr</span></h5>
                 </div>
                 </li>
                   </ul>
