Fixed section typo

--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -51,7 +51,7 @@
         </ul>
           </div>
           </div>
-          <sectin class="northbound">
+          <section class="northbound">
               <h1>Northbound</h1>
               <div class="content">
               <ul>
