Updated frequency and eta

--- a/front-end-challenge/index.html
+++ b/front-end-challenge/index.html
@@ -14,7 +14,6 @@
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
         </div>
-
       </nav>
       <header class="header-title">
         <h2>Routes</h2>
@@ -31,8 +30,9 @@
               <h5>Randolph / Harbor</h5>
           </div>
             <div class="bus-frequency">
-              <h5><span style="font-weight:700">20</span> <span style="font-size:12px">min</span></h5>
-          </div>
+              <h5><span style="font-size:14px">In</span> <span style="font-weight:700">15</span> <span style="font-size:12px">min</span></h5>
+              <h5><span style="font-size:10px">Every 20 min</span></h5>
+                </div>
           </li>
           <li class="arriving">
             <div class="bus-number">
@@ -44,8 +44,9 @@
           </div>
 
           <div class="arriving-bus-frequency">
-            <h5><span style="font-weight:700">10</span> <span style="font-size:12px">min</span></h5>
-            <h3>arriving</h3>
+            <h5><span style="font-size:14px">In</span> <span style="font-weight:700">5</span> <span style="font-size:12px">min</span></h5>
+            <h3><span style="font-weight:700">arriving</span></h3>
+            <h5><span style="font-size:10px">Every 10 min</span></h5>
         </div>
         </li>
         </ul>
@@ -63,7 +64,8 @@
                 <h5>Devon / Clark</h5>
             </div>
               <div class="bus-frequency">
-                <h5><span style="font-weight:700">16</span> <span style="font-size:12px">min</span></h5>
+                <h5><span style="font-size:14px">In</span> <span style="font-weight:700">11</span> <span style="font-size:12px">min</span></h5>
+                <h5><span style="font-size:10px">Every 16 min</span></h5>
             </div>
             </li>
           </ul>
@@ -84,7 +86,8 @@
 
                 </div>
                   <div class="bus-frequency">
-                    <h5> <span style="font-weight:700">15</span> <span style="font-size:12px">min</span></h5>
+                    <h5><span style="font-size:14px">In</span> <span style="font-weight:700">10</span> <span style="font-size:12px">min</span></h5>
+                    <h5><span style="font-size:10px">Every 15 min</span></h5>
                 </div>
                 </li>
                 <li class="arriving">
@@ -99,9 +102,10 @@
                 </div>
 
                 <div class="arriving-bus-frequency">
-
-                  <h5><span style="font-weight:700">10</span> <span style="font-size:12px">min</span></h5>
+                  <h5><span style="font-size:14px">In</span> <span style="font-weight:700">5</span> <span style="font-size:12px">min</span></h5>
                   <h3><span style="font-weight:700">arriving</span></h3>
+                  <h5><span style="font-size:10px">Every 10 min</span></h5>
+
 
             </div>
               </li>
@@ -117,9 +121,7 @@
                       <h5>6x</h5>
                   </div>
                     <div class="bus-destination">
-
                       <h5>Jackson Park Express</h5>
-
                   </div>
                     <div class="bus-frequency">
                       <h5><span style="font-weight:700">N/A</span></h5>
@@ -140,7 +142,7 @@
                         <h5>Cottage Grove</h5>
                     </div>
                       <div class="bus-frequency">
-                        <h5> <span style="font-weight:700">3</span><span style="font-size:12px"> hr</span><span style="font-weight:700">10</span><span style="font-size:12px"> min</span></h5>
+                        <h5><span style="font-size:12px">Resume</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
                     </div>
                     </li>
                     <li>
@@ -151,7 +153,7 @@
                       <h5>Madison</h5>
                   </div>
                     <div class="bus-frequency">
-                      <h5><span style="font-weight:700">3</span><span style="font-size:12px"> hr</span><span style="font-weight:700">10</span><span style="font-size:12px"> min</span></h5>
+                      <h5><span style="font-size:12px">Resume</span> <span style="font-weight:700">12:10</span><span style="font-size:12px"> am</span></h5>
                   </div>
                   </li>
                   <li>
@@ -162,7 +164,7 @@
                     <h5>Streeterville / Taylor</h5>
                 </div>
                   <div class="bus-frequency">
-                    <h5><span style="font-weight:700">6</span><span style="font-size:12px"> hr</span></h5>
+                    <h5><span style="font-size:12px">Resume</span> <span style="font-weight:700">6:00</span><span style="font-size:12px"> am</span></h5>
                 </div>
                 </li>
                   </ul>
